--- a/.github/workflows/main_roommate-helper.yml
+++ b/.github/workflows/main_roommate-helper.yml
@@ -35,8 +35,11 @@ jobs:
           file_name: '.env'
 
       
-      - name: Install dependencies
+      - name: Install python dependencies
         run: pip install -r requirements.txt
+          
+      - name: Install FFmpeg
+        run: sudo apt install ffmpeg
 
       - name: Run unit tests
         run: python runUnitTests.py
